public/css/main.css
#calculator {
    display: inline;
}

#dgtemp {
    background-color: #999;
}

body {
    background-color: #f6f5f4;
}

/* Navbar header */

li.li-pipes {
    display: none;
    color: #f6f5f4;
    padding: 15px 0 15px 0;
}

/* Intro Section */

.jumbotron-container {
    height: 40vh;
}

.big-ass-tv {
    overflow: hidden;
    max-height: 100%;
    background: #2C2420 none;
    border: 2rem solid #5C5C6F;
    -webkit-box-shadow: 5px 8px 0px 0px rgba(76, 64, 81, 1);
    -moz-box-shadow: 5px 8px 0px 0px rgba(76, 64, 81, 1);
    box-shadow: 5px 8px 0px 0px rgba(76, 64, 81, 1);
}

.intro-section {
    max-width: 1200px;
    margin: 0 auto;
    background-size: cover;
    background: url('../img/dg_main_yellow_background.png') no-repeat center;
    height: auto;
    padding-bottom: 4rem;
}

.intro-container {
    padding-top: 100px;
}

/* Navigation section */

.nav-section {
    margin-top: 5rem;
    padding-bottom: 20px;
}

.nav-button {
    text-align: center;
    padding: 10rem 0;
    background-color: #78A19D;
    border-radius: 2px;
    border: 2px solid #C6D9DA;
    box-shadow: 5px 8px 0 0 #4D4856;
}

.nav-button:hover {
    transform: translate(3px, 4px);
    box-shadow: 2px 4px 0 0 #4D4856;
}

.nav-button:active {
    box-shadow: inset -1px 0 13px 3px #4D4856;
}

.nav-btn-text {
    position: absolute;
    bottom: 0;
    left: 1rem;
    color: #C6D9DA;
}

/* sub header */

.sub-header {
    width: 100%;
    margin: 0 auto;
    background-color: #78A19D;
    /* box shadow styling */
    -webkit-box-shadow: 0px 10px 0px 5px #60505a;
    -moz-box-shadow: 0px 10px 0px 5px #60505a;
    box-shadow: 0px 10px 0px 5px #446064;
    padding-bottom: 10px;
    margin-bottom: 2rem;
    margin-top: 5rem;
}

.sub-header-text-child {
    margin: 0;
}

/* Main sub-header Title */

.sub-header-text-child:nth-child(1) {
    font-weight: 800;
    text-transform: uppercase;
    color: antiquewhite;
    text-shadow: 3px 1px 0px rosybrown;
}

.sub-header-text-child:nth-child(2) {
    color: antiquewhite;
}

/* Meeting Info */

.sub-header-info-child {
    font-weight: 800;
    color: antiquewhite;
}

.sub-header-info-child:nth-child(2) {
    margin-bottom: 0;
}

/* sub header join button*/
.sub-header-btn {

}

.join-btn {
    padding: 1rem 4rem;

    color: white;
    background-color: #647389;
    border-color: #78A19D;
    border: 1px solid transparent;

    box-shadow: 0 3px 0 0 #5C5C6F;
}

/* Slack Section */

.form-container {
    background-color: #fff;
    padding-top: 25px;
    padding-bottom: 50px;
    text-align: center;
}

.slack-section {
    max-width: 1200px;
    margin: 0 auto;
}

.slack-header {
    height: 10rem;
    line-height: 10rem;
}

.slack-header img {
    margin-left: -3rem;
    display: inline-block;
    max-height: 100%;
}

.slack-header h2 {
    margin: 0 auto;
    display: inline-block;
    /* Center header vertically*/
    vertical-align: middle;
}

.slack-section-text {
    font-family: 'Lato', sans-serif;
}

.slack-join-button {
    background: #2ab27b;
    padding: 14px 32px 16px;
    font-size: 1.6rem;
    line-height: 1.2rem;
    font-family: 'Lato', sans-serif;
    font-weight: 600;
    color: #fff;
}

.slack-join-button:hover {
    background: #2ab27b;
    padding: 14px 32px 16px;
    font-size: 1.6rem;
    line-height: 1.2rem;
    font-family: 'Lato', sans-serif;
    font-weight: 600;
    color: #fff;
    box-shadow: 5px 5px 0 0;
}

.slack-input-field {
    font-size: 1.5em;
    height: 2em;
}

/* About Section */

.about-section {
    margin: 0 auto;
    max-width: 1200px;
    background-size: cover;
    background: url('../img/dg_main_red_background.png') no-repeat center;
    padding-bottom: 8rem;
}

.about-header {
    background-color: white;
    border-radius: 25px;
    text-align: center;
    position: relative;
    transform: skew(-4deg, -4deg) rotate(4deg);
    font-family: Helvetica, sans-serif;
    padding: 2rem 1rem;
    box-shadow: 8px 12px 0 0 lightgrey;
    color: darkslategray;
    margin-top: 8rem;
    margin-bottom: 4rem;
}

.about-header h2 {
    font-weight: 800;
}

.about-container {
    background-color: white;
    color: darkslategrey;
    font-size: 2em;
    line-height: 2em;
    border-radius: 25px;
    box-shadow: 8px 12px 0 0 lightgrey;
}

.about-container p {
    margin: 2rem 2rem 2rem 2rem;
}

/* Projects section */

.projects-section {
    max-width: 1200px;
    margin: 0 auto;
    background-size: cover;
    background: url('../img/dg_main_green_background.png') no-repeat center;
}

/* Project Header */

.projects-header {
    background-color: #f6f5f4;
    height: 300px;
    position: relative;
}

.projects-header-text {
    color: #d6d5d4;
    text-transform: uppercase;
    font-size: 3em;
    position: absolute;
    bottom: 0;
    right: 0;
}

.projects-header-container {
    position: relative;
    height: 100%;
    margin: 0 auto;
    padding: 0;
    border: 0;
    color: white;
}

/* Project header images */

.project-header-img {
    width: 100%;
    height: 100%;
    margin: 0 auto;
    display: inline-block;
    float: left;
}

/* hide all but first image for mobile */

.project-header-img:nth-child(2),
.project-header-img:nth-child(3) {
    display: none;
}

.tint {
    height: 100%;
}

.tint:before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    transition: all .3s linear;
    background: rgba(203, 191, 245, 0.8);
}

/* Projects list */

.projects-list-container {
    margin-top: 4rem;
}

.projects-list {
    list-style: none;
    color: #fff;
    padding-left: 0;
}
/* project categories */

.project-category-header {
    background-color: #4D4856;
    text-align: center;
    color: lightblue;
    border-radius: 157px 157px 157px 157px;
    box-shadow: 5px 8px 0 0 antiquewhite;
}
/* ... */

